# devdocs-chatbot

./: README.md
backend/: .env.example  .env.production.example  .gitignore  main.py  pyproject.toml  test_models.py
backend/app/: config.py  langfuse_client.py
backend/app/api/routers/: chat.py  generate.py  health.py
backend/app/models/: chat.py  generation.py
backend/app/services/: code_generation_service.py  file_service.py  pinecone_service.py  rag_service.py
frontend/: .env.production.example  .gitignore  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx  sidebar.tsx
frontend/components/chat/: chat-input.tsx  chat-interface.tsx  framework-selector.tsx  message.tsx  mode-toggle.tsx
frontend/components/layout/: header.tsx
frontend/hooks/: use-chat.ts  use-hydration.ts
frontend/lib/: api-client.ts
frontend/store/: chat-store.ts
frontend/types/: api.ts
