[project]
name = "devdocs-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.128.0",
    "langfuse>=3.11.2",
    "openai>=2.14.0",
    "pinecone>=8.0.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]
